# RL_Final_Project

./: CONVERSION_NOTES.md  README.md  architecture.md  architecture_leader_follower.md  architecture_m_explore_adapted.md  issues
aruco_ros/aruco_ros/launch/: single.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_px4_drone/share/ros2_px4_drone/: package.bash  package.zsh
log/: latest_build
robotic_bar_package/: CMakeLists.txt  package.xml
robotic_bar_package/launch/: delivery.launch.py  robotic_bar.launch.py
robotic_bar_package/models/marker_0/: model.config  model.sdf
robotic_bar_package/src/: bar_button.py  fra2mo_brain.cpp  kuka_brain.cpp
robotic_bar_package/worlds/: bar.sdf
ros2_fra2mo/: package.xml
ros2_fra2mo/config/: navigation.yaml
ros2_fra2mo/launch/: fra2mo_navigation.launch.py
ros2_fra2mo/maps/: map.yaml
ros2_fra2mo/rviz_conf/: fra2mo_conf.rviz
ros2_fra2mo/urdf/: lidar_gazebo_macro.xacro  utility_macro.xacro
ros2_iiwa/iiwa_description/config/: iiwa.config.xacro
ros2_px4_drone/: CMakeLists.txt  README.md
ros2_px4_drone/config/: navigation.yaml
ros2_px4_drone/launch/: px4_drone_explore.launch.py
ros2_px4_drone/src/: nav2_px4_bridge.cpp  px4_drone_controller.cpp
scripts/: generate_aruco_tags.py  launch_px4_sitl.sh  singledrone.launch.py
src/m-explore-ros2/explore/src/: costmap_client.cpp  explore.cpp
src/maze_gazebo/: CMakeLists.txt  package.xml
src/maze_gazebo/launch/: gazebo.launch.py
src/maze_gazebo/models/aruco_marker/: model.config  model.sdf
src/maze_gazebo/models/aruco_marker_0/: model.config  model.sdf
src/maze_gazebo/models/aruco_marker_1/: model.config  model.sdf
src/maze_gazebo/models/aruco_marker_2/: model.config  model.sdf
src/maze_gazebo/models/aruco_marker_3/: model.config  model.sdf
src/maze_gazebo/models/aruco_marker_4/: model.config  model.sdf
src/maze_gazebo/models/rescue_drone/: model.config  model.sdf
src/maze_gazebo/worlds/: maze.sdf  rescue_arena.world  rescue_maze.world  rescue_maze.world.bak  rescue_swarm.world
src/maze_mission/: nav2_action_bridge.py  package.xml  setup.py
src/maze_mission/config/: aruco_params.yaml  drone_costmap.yaml  drone_explore.yaml  drone_slam_params.yaml  map_merge_params.yaml  turtlebot_nav2_params.yaml
src/maze_mission/launch/: drone.launch.py  drones.launch.py  map_merge.launch.py  mission.launch.py  sim_full.launch.py  turtlebot.launch.py
src/maze_mission/maze_mission/: aerial_mapper.py  aruco_detector.py  mission_planner.py  nav2_action_bridge.py  origin_sync_node.py  turtlebot_controller.py
src/maze_msgs/: CMakeLists.txt  package.xml
src/maze_msgs/msg/: ArucoDetection.msg
src/maze_nav2/: CMakeLists.txt  package.xml
src/maze_nav2/config/: nav2_params.yaml
src/maze_nav2/launch/: nav2.launch.py
src/ros2_fra2mo/: CMakeLists.txt
src/ros2_fra2mo/config/: amcl.yaml  explore.yaml
src/ros2_fra2mo/launch/: fra2mo_explore.launch.py
src/ros2_fra2mo/maps/: map.pgm
src/ros2_fra2mo/urdf/: camera_gazebo_macro.xacro  fra2mo.urdf.xacro  fra2mo_base_macro.xacro
src/ros2_px4_drone/: CMakeLists.txt  package.xml
src/ros2_px4_drone/config/: explore.yaml  navigation.yaml  slam.yaml
src/ros2_px4_drone/launch/: px4_drone_explore.launch.py  px4_drone_slam.launch.py
src/ros2_px4_drone/rviz_conf/: explore.rviz  explore_maze.rviz
src/ros2_px4_drone/scripts/: launch_px4_sitl.sh
src/ros2_px4_drone/src/: nav2_px4_bridge.cpp  odom_bl_tf.cpp  px4_drone_controller.cpp
